# gravix2

libgravix2/bindings/python/: example.ipynb
physics/: CMakeLists.txt  README.md
physics/bindings/python/: debug.py  example.ipynb  missile.py  world.py
physics/bindings/python/src/physics/: __init__.py  helper.py  missile.py  physics.py  planet.py  world.py
physics/bindings/python/test/: conftest.py  test_missile.py  test_world.py
physics/cmake/: CompilerWarnings.cmake  Doxygen.cmake  Sanitizers.cmake  StandardProjectSettings.cmake
physics/include/: api.h  config.h.in  integrators.h  linalg.h  missile.h  planet.h  pot.h  repr.h  rotation.h  world.h
physics/src/: CMakeLists.txt  helpers.c  integrators.c  linalg.c  missile.c  planet.c  pot.c  rotation.c  world.c
physics/test/: CMakeLists.txt  helpers_tests.c  integrators_tests.c  planet_tests.c  rotation_tests.c  world_tests.c
server/: sphere_utils.py
